# datacrunch_api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: verify.yaml
datacrunch_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
datacrunch_api/tools/: query.py  secret.py
datacrunch_api/v1/: __init__.py  _api_session.py  autoupdate.py  balance.py  compute.py  container.py  container_registry_settings.py  credentials.py  deployment.py  deployments.py  entrypoint.py  environment.py  healthcheck.py  images.py  instances.py  scaling.py  secret.py  secrets.py  serverless_compute.py  ssh_keys.py  startup_scripts.py  volume_mounts.py  volumes.py
datacrunch_api/v1/types/: autoupdate.py  container.py  container_registry_settings.py  credentials.py  entrypoint.py  environment.py  instance.py  scaling.py  ssh_key.py  startup_script.py  volume.py
examples/: drawing_metadata_finetuned_model.py  ds3_endpoint.py  metadata_extraction_vllm_endpoint.py  mistral_endpoint.py  r1_endpoint.py  sync_dc_data.py  sync_storage.py  vllm_endpoint.py
tests/: test_api_session.py  test_balance.py  test_deployments.py  test_images.py  test_instances.py  test_secrets.py  test_serverless_compute.py  test_ssh_keys.py  test_startup_scripts.py  test_volumes.py
